# benthic_default_assets

./: Cargo.toml  README.md
Animations/: Stand.glb
Mesh/: Default.glb
src/: default_animations.rs  lib.rs  render_data.rs  skeleton.rs
