[package]
name = "benthic_default_assets"
version = "0.0.0"
edition = "2024"

[dependencies]
glam = {version = "0.32.1", features = ["serde"]}
indexmap = {version = "2.13.0", features = ["serde"]}
once_cell = "1.21.4"
serde = {version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
strum = "0.28.0"
strum_macros = "0.28.0"
uuid = {version = "1.22.0", features = ["serde"]}

